# python-codicefiscale

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  requirements-build-lock.txt  requirements-data-lock.txt  requirements-data.txt  requirements-lock.txt  requirements-test-lock.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  create-release.yml  pythonpackage.yml  test-package.yml  update-data.yml
codicefiscale/: __init__.py  __main__.py  cli.py  codicefiscale.py  data.py  metadata.py  version.py
codicefiscale/data/: countries-patch.json  countries.json  deleted-countries.json  municipalities-patch.json  municipalities.json
images/: python-codicefiscale.psd
scripts/: updatedata.py
src/codicefiscale/: __init__.py  __main__.py  cli.py  codicefiscale.py  data.py  metadata.py
src/codicefiscale/data/: countries-patch.json  countries.json  names.json
tests/: test_checks.py  test_cli.py  test_codicefiscale.py  test_decode.py  test_encode.py  test_issue_0016.py  test_issue_0036.py  test_issue_0037.py  test_issue_0079.py  test_issue_0113.py  test_issue_0162.py  test_issue_0203.py  test_metadata.py  tests.py
tests/issues/: test_issue_0016.py  test_issue_0036.py  test_issue_0037.py  test_issue_0079.py  test_issue_0113.py  test_issue_0162.py  test_issue_0203.py  test_issue_0210_0213.py  test_issue_0246.py
