[metadata]
name = python-codicefiscale
version = 0.6.0
author = Fabio Caccamo
author_email = fabio.caccamo@gmail.com
description = encode / decode italian fiscal codes - codifica / decodifica del Codice Fiscale italiano.
keywords =
    codicefiscale
    codice
    fiscale
    cf
    fiscal code
    italia
    italy
url = https://github.com/fabiocaccamo/python-codicefiscale
download_url = https://github.com/fabiocaccamo/python-codicefiscale/archive/0.6.0.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Build Tools
project_urls =
    Documentation = https://github.com/fabiocaccamo/python-codicefiscale#readme
    Issues = https://github.com/fabiocaccamo/python-codicefiscale/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
    python-dateutil ~= 2.8.0, < 3.0.0
    python-fsutil >= 0.8.0, < 1.0.0
    python-slugify >= 7.0.0, < 8.0.0
include_package_data = True
tests_require =

[options.packages.find]
exclude = contrib; docs; tests*
