[metadata]
name = python-codicefiscale
version = attr: codicefiscale.metadata.__version__
author = Fabio Caccamo
author_email = fabio.caccamo@gmail.com
maintainer = Fabio Caccamo
maintainer_email = fabio.caccamo@gmail.com
description = encode / decode italian fiscal codes - codifica / decodifica del Codice Fiscale italiano.
keywords =
    codicefiscale
    codice
    fiscale
    cf
    fiscal code
    italia
    italy
url = https://github.com/fabiocaccamo/%(name)s
download_url = https://github.com/fabiocaccamo/%(name)s/releases
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Build Tools
project_urls =
    Documentation = https://github.com/fabiocaccamo/%(name)s#readme
    Issues = https://github.com/fabiocaccamo/%(name)s/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
    python-dateutil ~= 2.8.0, < 3.0.0
    python-fsutil >= 0.10.0, < 1.0.0
    python-slugify >= 7.0.0, < 9.0.0
include_package_data = True

[options.packages.find]
exclude =
    docs*
    images*
    scripts*
    tests*

[mypy]
files = codicefiscale
ignore_missing_imports = True
strict = True
